Cycles X Particle Alpha #91922

Closed
opened 2021-10-03 17:56:26 +02:00 by Greg Ellingson · 9 comments

System Information
Operating system: WIN10
Graphics card: 3090FE

Blender Version
Broken: blender-3.0.0-alpha+master.34cf33eb1209-windows.amd64-release
Worked: blender 2.93.4

Short description of error
Particles are procedural emission plugged into volume. There appears to be some kind of alpha issue as they block the light emitted from other particles behind them.CyclesXSunTest.blend

Exact steps for others to reproduce the error
Attached is the blend file. Open in 2.93.4 and render, then open in 3.0 and render. It'll reproduce these attached images.

CyclesXTest.jpg

Cycles294Test.jpg

**System Information** Operating system: WIN10 Graphics card: 3090FE **Blender Version** Broken: blender-3.0.0-alpha+master.34cf33eb1209-windows.amd64-release Worked: blender 2.93.4 **Short description of error** Particles are procedural emission plugged into volume. There appears to be some kind of alpha issue as they block the light emitted from other particles behind them.[CyclesXSunTest.blend](https://archive.blender.org/developer/F10750025/CyclesXSunTest.blend) **Exact steps for others to reproduce the error** Attached is the blend file. Open in 2.93.4 and render, then open in 3.0 and render. It'll reproduce these attached images. ![CyclesXTest.jpg](https://archive.blender.org/developer/F10750193/CyclesXTest.jpg) ![Cycles294Test.jpg](https://archive.blender.org/developer/F10750192/Cycles294Test.jpg)
Author

Added subscriber: @WhiteRoosterProductions

Added subscriber: @WhiteRoosterProductions
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm.

The issue seems to be with objects intersecting each other. You can see the outline where they intersect which shouldn't be happening.

I can confirm. The issue seems to be with objects intersecting each other. You can see the outline where they intersect which shouldn't be happening.

Added subscriber: @Sergey

Added subscriber: @Sergey

Simplified version of the file CyclesXSunTest_Simple.blend.

Addition: The root cause is not big enough volume stack. For the ideal performance need to detect the volume nested depth at runtime, to keep the integrator state small.

Simplified version of the file [CyclesXSunTest_Simple.blend](https://archive.blender.org/developer/F10779953/CyclesXSunTest_Simple.blend). Addition: The root cause is not big enough volume stack. For the ideal performance need to detect the volume nested depth at runtime, to keep the integrator state small.
Sergey Sharybin self-assigned this 2021-10-05 11:57:35 +02:00

This issue was referenced by blender/cycles@e276f51f6f

This issue was referenced by blender/cycles@e276f51f6f628fc504a5a99fcace69e418cf9858

This issue was referenced by c6275da852

This issue was referenced by c6275da852eab77e2cea1ae601a43a2dbaad6c27

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91922
No description provided.